refactor class to not use current user